[project]
name = "beatliner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arseny Boykov", email = "appkiller16@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "exifread",
    "mutagen",
    "pillow",
    "pydavinci",
    "tqdm",
    "xattr",
]

[project.scripts]
beatliner = "beatliner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "fusionscript-stubs",
    "mypy",
]
