[project]
name = "beatspine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arseny Boykov", email = "appkiller16@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "exifread",
    "mactime>=0.1.0",
    "mutagen",
    "pillow",
    "pyaaf2>=1.7.1",
    "pydavinci",
    "rich>=14.0.0",
    "tqdm",
    "xattr",
]

[project.scripts]
beatspine = "beatspine:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "fusionscript-stubs",
    "mypy",
    "ruff>=0.11.12",
    "ty>=0.0.1a7",
]
